# oxygine-movie

./: .gitignore  Android.mk  CMakeLists.txt
examples/Movie/data/: res.xml
examples/Movie/data/movies/: Bridge.ogv  Scredriver.ogv  Wheel_.ogv  Wrench_right.ogv  bridge_wheel_.ogv  journal.ogv  key_in.ogv  mine_wagon_.ogv  poweder.ogv  t2p.ogv  trap.ogv
examples/Movie/proj.android/: AndroidManifest.xml  build.xml  install.bat
examples/Movie/proj.android/jni/src/: Android.mk
examples/Movie/proj.android/res/values/: strings.xml
examples/Movie/proj.android/src/org/oxygine/Movie/: MainActivity.java
examples/Movie/proj.cmake/: CMakeLists.txt  run.sh
examples/Movie/proj.ios/HelloWorldMovie_ios.xcodeproj/: project.pbxproj
examples/Movie/proj.win32/: Movie.sln  Movie.vcxproj  Movie.vcxproj.filters
examples/Movie/src/: TestCommon.h  TestConverse.h  TestPrerender.h  TestStress.h  example.cpp  test.cpp  test.h
libs/: libvlc.lib
proj.ios/oxygine-movie.xcodeproj/: project.pbxproj
proj.win32/: oxygine-movie.sln  oxygine-movie.vcxproj  oxygine-movie.vcxproj.filters
src/: MovieSprite.cpp  MovieSprite.h  MovieSpriteVLC.cpp
src/theora/: MovieSpriteTheora.cpp  MovieSpriteTheora.h
